cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(chat)
add_executable(${PROJECT_NAME} "main.cpp" "crypto.cpp" "dh.cpp" "session.cpp" "server.cpp" "client.cpp")
target_compile_options(${PROJECT_NAME} PRIVATE "-Wall" "-Wextra" "-pedantic" "-g3")
set(BOOST_LIBS_LIST system program_options )
find_package(Boost 1.64.0 REQUIRED COMPONENTS ${BOOST_LIBS_LIST})
target_link_libraries( chat boost_system boost_program_options sodium pthread)
